crates/air/tests/integration/snapshots/integration__format__stdin_relative_stdin_file_paths_resolve_from_working_directory.snap
---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(directory).stdin(Stdio::piped()).stdout(Stdio::piped()).stderr(Stdio::piped()).arg(\"format\").arg(\"--stdin-file-path\").arg(test_path).run_with_stdin(test_contents.to_string())"
---
success: true
exit_code: 0
----- stdout -----
1 +
    1

----- stderr -----

----- args -----
format --stdin-file-path test.R
