crates/air/tests/integration/snapshots/integration__format__stdin_uses_default_air_toml_settings.snap
---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(directory).stdin(Stdio::piped()).stdout(Stdio::piped()).stderr(Stdio::piped()).arg(\"format\").arg(\"--stdin-file-path\").arg(test_path).run_with_stdin(test_contents.to_string()).remove_arguments()"
---
success: true
exit_code: 0
----- stdout -----
1 +
    1

----- stderr -----

----- args -----
<removed>
