crates/air/tests/integration/snapshots/integration__format__stdin_works_correctly_with_check.snap
---
source: crates/air/tests/integration/format.rs
expression: "Command::new(binary_path()).current_dir(directory).stdin(Stdio::piped()).stdout(Stdio::piped()).stderr(Stdio::piped()).arg(\"format\").arg(\"--stdin-file-path\").arg(test_path).arg(\"--check\").run_with_stdin(test_contents.to_string()).remove_arguments()"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----

----- args -----
<removed>
